Bug 25536 - masive corruption in xserver git
Summary: masive corruption in xserver git
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Acceleration/EXA (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 25575 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-09 04:18 UTC by Andrew Randrianasulu
Modified: 2009-12-11 16:58 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
gkrellm with corruption (34.45 KB, image/png)
2009-12-09 04:19 UTC, Andrew Randrianasulu
no flags Details
xorg.conf (10.43 KB, text/plain)
2009-12-09 04:20 UTC, Andrew Randrianasulu
no flags Details
old X log (28.29 KB, text/plain)
2009-12-09 04:21 UTC, Andrew Randrianasulu
no flags Details
current X log (28.15 KB, text/plain)
2009-12-09 04:21 UTC, Andrew Randrianasulu
no flags Details
Probable fix (1.16 KB, patch)
2009-12-09 04:51 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Andrew Randrianasulu 2009-12-09 04:18:54 UTC
I have 

01:05.0 VGA compatible controller: ATI Technologies Inc Radeon 3100 Graphics (prog-if 00 [VGA controller])
        Subsystem: ASUSTeK Computer Inc. Device 82ee
        Flags: bus master, fast devsel, latency 0, IRQ 18
        Memory at d0000000 (32-bit, prefetchable) [size=256M]
        I/O ports at d000 [size=256]
        Memory at fbef0000 (32-bit, non-prefetchable) [size=64K]
        Memory at fbd00000 (32-bit, non-prefetchable) [size=1M]
        Expansion ROM at <unassigned> [disabled]
        Capabilities: [50] Power Management version 3
        Capabilities: [a0] MSI: Mask- 64bit+ Count=1/1 Enable-
        Kernel driver in use: radeon
        Kernel modules: radeon

01:05.0 0300: 1002:9611 (prog-if 00 [VGA controller])
        Subsystem: 1043:82ee

When using everything (libdrm, mesa, xserver, xf86-video-ati) from git trees (master branch everywhere) - i got very visible screen corruption.

Reverting 955b9f23a34cc79a5cd9676b45b3df4ffcc7302b for xserver git tree ("EXA: ModifyPixmapHeader_mixed fixes") fixes problems for me.
Comment 1 Andrew Randrianasulu 2009-12-09 04:19:52 UTC
Created attachment 31876 [details]
gkrellm with corruption
Comment 2 Andrew Randrianasulu 2009-12-09 04:20:28 UTC
Created attachment 31877 [details]
xorg.conf

Messy, as usual.
Comment 3 Andrew Randrianasulu 2009-12-09 04:21:07 UTC
Created attachment 31878 [details]
old X log
Comment 4 Andrew Randrianasulu 2009-12-09 04:21:53 UTC
Created attachment 31879 [details]
current X log
Comment 5 Tormod Volden 2009-12-09 04:25:09 UTC
I can confirm the corruption on r300/M26/X700/1002:5653.
Comment 6 Andrew Randrianasulu 2009-12-09 04:29:06 UTC
For kernel side i have  2.6.32-rc8-i486 , actually kernel for drm-radeon-next Because this tree rebased often, i can only tell what i have currently kernel with r7xx irq support, and of course i have firmware in /lib , as posted on dri-devel ML. kernel tree from around 1 dec 2009 - 

4c7886791264f03428d5424befb1b96f08fc90f4 (drm/radeon/kms: Rework radeon object handling) and pervious commit was 1614f8b17b8cc3ad143541d41569623d30dbc9ec (drm/radeon/kms: add irq mitigation code for sw interrupt.) and even before that d8f60cfc93452d0554f6a701aa8e3236cbee4636 (drm/radeon/kms: Add support for interrupts on r6xx/r7xx chips (v3))
Comment 7 Michel Dänzer 2009-12-09 04:51:51 UTC
Created attachment 31880 [details] [review]
Probable fix

This xserver patch should fix it.
Comment 8 Andrew Randrianasulu 2009-12-09 08:37:33 UTC
(In reply to comment #7)
> Created an attachment (id=31880) [details]
> Probable fix
> 
> This xserver patch should fix it.
> 

Yes, image back to normal with patch. Thanks a lot!
Comment 9 Tormod Volden 2009-12-09 09:19:25 UTC
I can confirm the patch fixed the issue. Thanks!
Comment 10 Michel Dänzer 2009-12-10 09:33:49 UTC
Fix landed on master, thanks for testing.
Comment 11 Bob Gleitsmann 2009-12-11 16:58:15 UTC
*** Bug 25575 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.